# CampusGuard

./: .gitignore  camera_server.py  campusguard-plan.md  docker-compose-production.yaml  docker-compose.yaml  package-lock.json  readme.md  test_feed.py
.dart_tool/: package_config.json  package_config_subset
.dart_tool/flutter_build/7749c86bc6ba764826ebe073cd7be039/: .filecache  dart_build.d  dart_build.stamp  debug_ios_bundle_flutter_assets.stamp  debug_universal_framework.stamp  debug_unpack_ios.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
.devcontainer/: devcontainer.json
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
backend/: .dockerignore  .gitignore  Dockerfile  camera_opener.py  camera_service.py  entrypoint.sh  gemini.py  gemini_service.py  main.py  opencv_service.py  pyproject.toml  requirements.txt
backend/api/: notification.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: FlashOverlay.js  Header.js
frontend/src/utils/: alarm.js
notification/: pubspec.yaml
notification/ios/Runner.xcodeproj/: project.pbxproj
notification/lib/: main.dart
notification/lib/models/: alert_model.dart
notification/lib/screens/: home_screen.dart
notification_web/: Dockerfile  package-lock.json
notification_web/public/: index.html
notification_web/src/: App.js  constants.js  index.css
(+10 files in other folders)
