[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "eventlet>=0.41.0",
    "fastapi>=0.135.3",
    "google-genai>=1.70.0",
    "httpx>=0.28.1",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "python-socketio>=5.16.1",
    "sse-starlette>=3.3.4",
    "uvicorn>=0.43.0",
    "websockets>=16.0",
]
